--- a/_posts/17-04-2016-h3ll0-w0rld.markdown
+++ b/_posts/17-04-2016-h3ll0-w0rld.markdown
@@ -7,6 +7,8 @@ H3ll0 fr13nds!
 
 Não vou usar l33t aqui, chega de l33t por favor!
 
+![img](https://media.giphy.com/media/mQG644PY8O7rG/giphy.gif "LOL")
+
 Bom amigos, para quem ainda não me conhece, me chamo Danilo Vaz ou pode me chamar de Unk (UNK se pronuncia U ene ka), eu não vou prolongar muito esse post, mas gostaria de esclarecer algumas coisas sobre a mudança do blog(De novo).
 
 Pra quem acompanha meus estudos desde 2011 com meu primeiro blog pode ter percebido algumas mudanças nas minhas postagens, antes as postagens giravam em torno de tudo que era programas/tools de terceiros e tutoriais feito por outras pessoas, era esse o tipo de conteúdo que tinha no meu primeiro blog e com o tempo eu fui vendo que não era algo bem visto.
